# Media-Player

./: .gitignore  CMakeLists.txt  FrameQueue.h  Makefile  README.md  RingBuffer.h  VideoState.cpp  VideoState.h  main.cpp
include/: VideoState.hpp
src/: VideoState.cpp  main.cpp
